--- a/Session1/image.html
+++ b/Session1/image.html
@@ -25,6 +25,11 @@
         <h5>Some Comments...</h5>
     </div>
 
+    <svg width="100" height="100">
+
+        <circle cx="50" cy="50"  r="40"  stroke="green" stroke-width="4" fill="yellow"/>
+    </svg>
+
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
