--- a/Session1/cards.html
+++ b/Session1/cards.html
@@ -1,40 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First Demo</title>
-
-    <!--goto the official website of bootstrap and copy the css and bundle script file-->
-    <!--link:  https://getbootstrap.com/docs/4.6/getting-started/introduction/-->
+    <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+
 </head>
-
 <body>
+    <h1>Card Demo</h1>
 
-
-    <h1>Welcome To Bootstrap</h1>
-
-    <div class="container" style="background-color: chocolate;">
-        <h1>Hello World</h1>
-        <p>This is Container Class</p>
-
+    <div class="card">
+        <div class="card-body">
+            This is my card
+        </div>
     </div>
 
-    <div class="container-fluid" style="background-color: yellowgreen;">
-        <h1>Hello World</h1>
-        <p>This is Container Fluid Class</p>
+    <div class="card">
+        <img src="image/imgN.png" class="img-thumbnail card-imp-top" style="width: 50%;">
+
+        <div class="card-body">
+            <p class="card-title"><b>Naruto</b></p>
+            <p class="card-text">Naruto is my favourite Anime</p>
+        </div>
     </div>
-
-    <div class="jumbotron" style="background-color: yellow;">
-        <h1>Hello World</h1>
-        <p>This is Jumbotron</p>
-    </div>
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -43,5 +34,4 @@
         integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
