Dropdown Menu & Stateful Buttons Demo

--- a/Session1/dropdown.html
+++ b/Session1/dropdown.html
@@ -18,6 +18,23 @@
         <a href="#" class="dropdown-item">C</a>
         <a href="#" class="dropdown-item">Python</a>
     </div>
+
+    <br><br>
+    <h1>Stateful Buttons Demo</h1>
+
+    <label class="btn btn-primary active">
+        <input type="checkbox" name="options">
+        Option A
+    </label>
+    <label class="btn btn-primary active">
+        <input type="checkbox" name="options">
+        Option B
+    </label>
+    <label class="btn btn-primary active">
+        <input type="checkbox" name="options">
+        Option C
+    </label>
+
     
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
