Forms Demo, Select Option (size)

--- a/Session2/forms.html
+++ b/Session2/forms.html
@@ -51,9 +51,28 @@
                         <input type="radio" id="age">
                     </div>
 
-                    <div class="form-group">
-                        <input type="submit" value="Register">
-                    </div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col">
+                                <div class="form-group">
+                                    <select class="form-control form-control-lg">
+                                        <option>Large Select</option>
+                                    </select>
+
+                                    <select class="form-control">
+                                        <option>Defaut Select</option>
+                                    </select>
+
+                                    <select class="form-control form-control-sm">
+                                        <option>Small Select</option>
+                                    </select>
+
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <input type="submit" value="Register">
+                            </div>
                 </form>
             </div>
         </div>
