Forms Demo, Select Option (size), Checkbox

--- a/Session2/forms.html
+++ b/Session2/forms.html
@@ -70,6 +70,13 @@
                                 </div>
                             </div>
 
+                            <div class="col">
+                                <div class="form-group">
+                                    <lablel for="checkbox">Age : Above 60</lablel>
+                                    <input type="checkbox" id="age">
+                                </div>
+                            </div>
+
                             <div class="form-group">
                                 <input type="submit" value="Register">
                             </div>
