--- a/Session2/typeahead.html
+++ b/Session2/typeahead.html
@@ -28,7 +28,7 @@
     </div>
 
 
-    <!--Tyahead Script-->
+    <!--Typeahead Script-->
 
     <script type="text/javascript">
         $(document).ready(function(){
