--- a/Session2/typeahead.html
+++ b/Session2/typeahead.html
@@ -21,9 +21,9 @@
     <div class="container">
         <h1>Typeahead</h1>
         <form action="#" method="post">
-
+            <fieldset disabled>
             <input type="text" name="query" id="query" placeholder="Enter Your Name">
-
+            </fieldset>
         </form>
     </div>
 
