Datatypes in Javascipt

--- a/Session3/datatype.html
+++ b/Session3/datatype.html
@@ -36,13 +36,13 @@
 
 
 
-        // var array = ["a", "b", "c", "d"];
+        var array = ["a", "b", "c", "d"];
 
-        // var json1 = { "fname": "Alex", "lname": "jhon", "email": "alex@gmail.com" };
+        var json1 = { "fname": "Alex", "lname": "jhon", "email": "alex@gmail.com" };
 
 
-        // console.log("Array : " + array);
-        // console.log("Json Array: " + json1);
+        console.log("Array : " + array);
+        console.log("Json Array: " + json1);
 
 
     </script>
